--- a/package.json
+++ b/package.json
@@ -3,19 +3,17 @@
   "version": "1.0.0",
   "description": "A MERN stack book search engine",
   "scripts": {
-    "start": "node server/server.js",
-    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
-    "install": "cd server && npm install && cd ../client && npm install",
-    "build": "cd client && npm run build",
+    "start": "cd Develop/server && node server.js",
+    "develop": "concurrently \"cd Develop/server && npm run watch\" \"cd Develop/client && npm start\"",
+    "install": "cd Develop/server && npm install && cd ../client && npm install",
+    "build": "cd Develop/client && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/BryceGitHuba/Search-Engine.git"
   },
-  "keywords": [
-    "Books"
-  ],
+  "keywords": ["Books"],
   "author": "Bryce Wheeler",
   "license": "MIT",
   "bugs": {
